Fix gallery photos cropping faces - add object-position: top center

--- a/sass/pages/_hero-section.scss
+++ b/sass/pages/_hero-section.scss
@@ -255,6 +255,7 @@
       width: 100%;
       height: 100%;
       object-fit: cover;
+      object-position: top center;
       transition: transform 0.3s;
 
       &:hover {
